@@ -35,6 +35,11 @@ class Application extends CI_Controller {
 	{
 		$this->data['menubar'] = $this->parser->parse('_menubar', $this->config->item('menu_choices'), true);
 		$this->data['content'] = $this->parser->parse($this->data['pagebody'], $this->data, true);
+		
+		//convert Caboose output into vew parameters
+		$this->data['caboose_styles'] = $this->caboose->styles();
+		$this->data['caboose_scripts'] = $this->caboose->scripts();
+		$this->data['caboose_trailings'] = $this->caboose->trailings();
 
 		// finally, build the browser page!
 		$this->data['data'] = &$this->data;
